# mumin-build

./: .flake8  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  bump_version.py  makefile  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml  ci.yml  docs.yml
data/: mumin.hdf
docs/source/: conf.py  index.rst  mumin.rst
mumin/: __init__.py  article.py  articles.py  data_extractor.py  dataset.py  dgl.py  download.py  dump.py  embedder.py  id_updator.py  image.py  media.py  rehydrate.py  twitter.py
src/mumin/: __init__.py  article.py  data_extractor.py  dataset.py  dgl.py  embedder.py  id_updator.py  image.py  twitter.py
src/scripts/: compile_mumin.py  versioning.py
tests/: test_article.py  test_data_extractor.py  test_dataset.py  test_dgl.py  test_embedder.py  test_id_updator.py  test_image.py  test_twitter.py
